Option to validate saids (in compiled scripts) to identify places where word synonyms are used in Said strings, a potential parsing bug

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -709,6 +709,7 @@ BEGIN
         MENUITEM "View syntax &tree",           ID_SCRIPT_VIEWSYNTAXTREE
         MENUITEM "Class hierarchy",             33015
         MENUITEM "Manage decompilation",        ID_SCRIPT_MANAGEDECOMPILATION
+        MENUITEM "Validate all Saids",          ID_SCRIPT_VALIDATEALLSAIDS
     END
     POPUP "&Help"
     BEGIN
