--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -652,6 +652,13 @@ BEGIN
     POPUP "Fo&nt"
     BEGIN
         MENUITEM "Use &windows font",           ID_MAKEFONT
+        POPUP "Shift pixels"
+        BEGIN
+            MENUITEM "Left\tCtrl-left",             ID_SHIFTPIXELS_LEFT
+            MENUITEM "Right\tCtrl-Right",           ID_SHIFTPIXELS_RIGHT
+            MENUITEM "Up\tCtrl-Up",                 ID_SHIFTPIXELS_UP
+            MENUITEM "Down\tCtrl-Down",             ID_SHIFTPIXELS_DOWN
+        END
     END
     POPUP "&Message"
     BEGIN
@@ -687,6 +694,13 @@ BEGIN
             MENUITEM "320x200",                     ID_RESOLUTION_320X200
             MENUITEM "640x400",                     ID_RESOLUTION_640X400
             MENUITEM "640x480",                     ID_RESOLUTION_640X480
+        END
+        POPUP "Shift pixels"
+        BEGIN
+            MENUITEM "Left\tCtrl-left",             ID_SHIFTPIXELS_LEFT
+            MENUITEM "Right\tCtrl-Right",           ID_SHIFTPIXELS_RIGHT
+            MENUITEM "Up\tCtrl-Up",                 ID_SHIFTPIXELS_UP
+            MENUITEM "Down\tCtrl-Down",             ID_SHIFTPIXELS_DOWN
         END
     END
     POPUP "Voca&b"
@@ -944,6 +958,7 @@ BEGIN
     "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
     "T",            ID_LIGHTUPCOORDS,       VIRTKEY, CONTROL, NOINVERT
+    "Q",            ID_MAIN_TOGGLEBLOCKCOMMENT, VIRTKEY, CONTROL, NOINVERT
     VK_F10,         ID_PLAY,                VIRTKEY, NOINVERT
     VK_F12,         ID_RECORD,              VIRTKEY, NOINVERT
     VK_F5,          ID_RUNGAME,             VIRTKEY, NOINVERT
@@ -957,7 +972,10 @@ BEGIN
     "B",            ID_VIEW_PASTESPECIALTRANSPARENT, VIRTKEY, SHIFT, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
-    "Q",            ID_MAIN_TOGGLEBLOCKCOMMENT, VIRTKEY, CONTROL, NOINVERT
+    VK_LEFT,        ID_SHIFTPIXELS_LEFT,    VIRTKEY, CONTROL, NOINVERT
+    VK_RIGHT,       ID_SHIFTPIXELS_RIGHT,   VIRTKEY, CONTROL, NOINVERT
+    VK_DOWN,        ID_SHIFTPIXELS_DOWN,    VIRTKEY, CONTROL, NOINVERT
+    VK_UP,          ID_SHIFTPIXELS_UP,      VIRTKEY, CONTROL, NOINVERT
 END
 
 IDR_ACCELERATORPICCOMMANDS ACCELERATORS
