Support show palette incides in EGA palette chooser More stability for EGA dither colors when adjusting

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1066,6 +1066,7 @@ BEGIN
     CONTROL         "",IDC_CHOOSECOLORSTATIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,20,138,76
     PUSHBUTTON      "Cancel",IDCANCEL,95,99,50,14,BS_FLAT
     LTEXT           "Choose a color:",IDC_DIALOGDESCRIPTION,7,7,115,11
+    CONTROL         "Show indices",IDC_CHECKINDICES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,103,78,10
 END
 
 IDD_MAINSLIDER DIALOGEX 0, 0, 384, 23
@@ -3333,6 +3334,11 @@ BEGIN
 END
 
 IDD_PICCLIPS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DIALOGCOLOR AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
